--- a/templates/package.json
+++ b/templates/package.json
@@ -1,9 +1,9 @@
 {
   "name": "templates",
   "version": "2.1.48",
-  "description": "GreaterWMS--Open Source Warehouse Management System",
-  "productName": "GreaterWMS--Open Source Warehouse Management System",
-  "author": "Elvis.Shi(elvis.shi@56yhz.com)",
+  "description": "WMS--Warehouse Management System",
+  "productName": "WMS--Warehouse Management System",
+  "author": "Elvis.Shi",
   "private": true,
   "scripts": {
     "lint": "eslint --ext .js,.vue ./",
